comment app deployment

--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -68,18 +68,18 @@
      - role: twitter-harvester-setup
 
 
-# Install data analytics scripts and React frontend
-- hosts: ProcessNode
-  vars_files:
-    - host_vars/application_env.yaml
-  gather_facts: true
-  vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_user: ubuntu
-    - ansible_ssh_private_key_file: ~/.ssh/team2.pem
-    - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+# # Install data analytics scripts and React frontend
+# - hosts: ProcessNode
+#   vars_files:
+#     - host_vars/application_env.yaml
+#   gather_facts: true
+#   vars:
+#     - ansible_python_interpreter: /usr/bin/python3
+#     - ansible_user: ubuntu
+#     - ansible_ssh_private_key_file: ~/.ssh/team2.pem
+#     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
-  roles:
-    - role: aurin-twitter-analytics-setup
-    - role: gps-processing-setup
-    - role: frontend-setup
+#   roles:
+#     - role: aurin-twitter-analytics-setup
+#     - role: gps-processing-setup
+#     - role: frontend-setup
