--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -11,46 +11,46 @@
 #
 
 # Set up instances and volumes on MRC
-- hosts: localhost
-  vars_files:
-    - host_vars/MRC.yaml
-  gather_facts: true
+# - hosts: localhost
+#   vars_files:
+#     - host_vars/MRC.yaml
+#   gather_facts: true
 
-  roles:
-    - role: openstack-volume
-    - role: openstack-security-group
-    - role: openstack-instance
+#   roles:
+#     - role: openstack-volume
+#     - role: openstack-security-group
+#     - role: openstack-instance
 
-# Install Docker and CouchDB
-- hosts: DataNodes
-  vars_files:
-    - host_vars/couchdb.yaml
-  gather_facts: true
-  vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_user: ubuntu
-    - ansible_ssh_private_key_file: ~/.ssh/team2.pem
-    - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+# # Install Docker and CouchDB
+# - hosts: DataNodes
+#   vars_files:
+#     - host_vars/couchdb.yaml
+#   gather_facts: true
+#   vars:
+#     - ansible_python_interpreter: /usr/bin/python3
+#     - ansible_user: ubuntu
+#     - ansible_ssh_private_key_file: ~/.ssh/team2.pem
+#     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
-  roles:
-    - role: common-setup
-    - role: docker-setup
-    - role: volume-mount
-    - role: couchdb-setup
+#   roles:
+#     - role: common-setup
+#     - role: docker-setup
+#     - role: volume-mount
+#     - role: couchdb-setup
 
- # Perform CouchDB configuration on all hosts except Masternode
-- hosts: DataNodes:!Masternode
-  vars_files:
-    - host_vars/couchdb.yaml
-  gather_facts: true
-  vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_user: ubuntu
-    - ansible_ssh_private_key_file: ~/.ssh/team2.pem
-    - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+#  # Perform CouchDB configuration on all hosts except Masternode
+# - hosts: DataNodes:!Masternode
+#   vars_files:
+#     - host_vars/couchdb.yaml
+#   gather_facts: true
+#   vars:
+#     - ansible_python_interpreter: /usr/bin/python3
+#     - ansible_user: ubuntu
+#     - ansible_ssh_private_key_file: ~/.ssh/team2.pem
+#     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
-  roles:
-    - role: couchdb-cluster-setup
+#   roles:
+#     - role: couchdb-cluster-setup
 
 # Install Twitter Harvester on all hosts
 - hosts: DataNodes
