fix continue y/n abortion

--- a/twitter-harvester/Dockerfile
+++ b/twitter-harvester/Dockerfile
@@ -22,6 +22,6 @@ RUN apt update \
 # FROM osgeo/gdal:ubuntu-full-3.0.4
 # Install other packages
 # RUN pip install --no-cache-dir --disable-pip-version-check -r requirements.txt
-RUN apt install -r requirements.txt
+RUN pip install -r requirements.txt
 # Run twitter harvester
 CMD [ "python", "./main.py"]
