--- a/twitter-harvester/requirements.txt
+++ b/twitter-harvester/requirements.txt
@@ -12,18 +12,18 @@ geopy==1.22.0
 idna==2.9
 jsons==1.1.2
 munch==2.5.0
-numpy==1.18.4
-oauthlib==3.1.0
-pandas==1.0.3
-pyproj==2.6.1.post1
-PySocks==1.7.1
-python-dateutil==2.8.1
-pytz==2020.1
-ratelimiter==1.2.0.post0
-requests==2.23.0
-requests-oauthlib==1.3.0
-Shapely==1.7.0
-six==1.14.0
-tweepy==3.8.0
-typish==1.6.0
-urllib3==1.25.9
+# numpy==1.18.4
+# oauthlib==3.1.0
+# pandas==1.0.3
+# pyproj==2.6.1.post1
+# PySocks==1.7.1
+# python-dateutil==2.8.1
+# pytz==2020.1
+# ratelimiter==1.2.0.post0
+# requests==2.23.0
+# requests-oauthlib==1.3.0
+# Shapely==1.7.0
+# six==1.14.0
+# tweepy==3.8.0
+# typish==1.6.0
+# urllib3==1.25.9
