--- a/twitter-harvester/Dockerfile
+++ b/twitter-harvester/Dockerfile
@@ -18,7 +18,7 @@ RUN apt update \
     && add-apt-repository -r ppa:ubuntugis/ppa \
     && apt update -q\
     && apt install -y gdal-bin python3-gdal libgdal-dev build-essential python3-dev \
-    && apt install Fiona \
+    && apt install fiona \
     && pip install -r requirements.txt
 
 # FROM osgeo/gdal:ubuntu-full-3.0.4
