--- a/twitter-harvester/Dockerfile
+++ b/twitter-harvester/Dockerfile
@@ -17,7 +17,7 @@ RUN apt update \
     && apt update \
     && add-apt-repository -r ppa:ubuntugis/ppa \
     && apt update -q\
-    && apt install -y gdal-bin python3-gdal libgdal-dev build-essential python3-dev fiona \
+    && apt install -y gdal-bin python3-gdal libgdal-dev build-essential python3-dev fiona python3-numpy\
     && pip install -r requirements.txt
 
 # FROM osgeo/gdal:ubuntu-full-3.0.4
