update package list

--- a/twitter-harvester/Dockerfile
+++ b/twitter-harvester/Dockerfile
@@ -3,25 +3,16 @@ FROM python:3
 
 COPY . /
 
-# Install dependencies
-# Install gdal for Fiona installation
-# RUN apt-get update \
-#     && aptitude install build-essential \
-#     && apt install libpq-dev \
-#     && apt install gdal-bin \
-#     && apt install libgdal-dev \
-#     && install pygdal==3.0.4.10 
-
-RUN apt update \
-    && apt install -y software-properties-common \
-    && apt update \
-    && add-apt-repository -r ppa:ubuntugis/ppa \
-    && apt update -q\
-    && pip3 uninstall numpy \
-    && apt update \
-    && apt install -y gcc gdal-bin python3-gdal libgdal-dev build-essential python3-dev fiona\
-    && pip install -r requirements.txt
-
+# RUN apt update \
+#     && apt install -y software-properties-common \
+#     && apt update \
+#     && add-apt-repository -r ppa:ubuntugis/ppa \
+#     && apt update -q\
+#     && pip3 uninstall numpy \
+#     && apt update \
+#     && apt install -y gcc gdal-bin python3-gdal libgdal-dev build-essential python3-dev fiona\
+#     && pip install -r requirements.txt
+RUN pip install -r requirements.txt
 # FROM osgeo/gdal:ubuntu-full-3.0.4
 # Install other packages
 # RUN pip install --no-cache-dir --disable-pip-version-check -r requirements.txt
