--- a/twitter-harvester/requirements.txt
+++ b/twitter-harvester/requirements.txt
@@ -5,12 +5,14 @@ click==7.1.2
 click-plugins==1.1.1
 cligj==0.5.0
 cloudant==2.13.0
+Fiona==1.8.13.post1
 geographiclib==1.50
 geopandas==0.7.0
 geopy==1.22.0
 idna==2.9
 jsons==1.1.2
 munch==2.5.0
+numpy==1.18.4
 oauthlib==3.1.0
 pandas==1.0.3
 pyproj==2.6.1.post1
