--- a/twitter-harvester/requirements.txt
+++ b/twitter-harvester/requirements.txt
@@ -5,7 +5,7 @@ click==7.1.2
 click-plugins==1.1.1
 cligj==0.5.0
 cloudant==2.13.0
-Fiona==1.8.13.post1
+# Fiona==1.8.13.post1
 geographiclib==1.50
 geopandas==0.7.0
 geopy==1.22.0
@@ -24,6 +24,6 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 Shapely==1.7.0
 six==1.14.0
-tweepy==3.8.0
-typish==1.6.0
-urllib3==1.25.9
+# tweepy==3.8.0
+# typish==1.6.0
+# urllib3==1.25.9
