--- a/twitter-harvester/requirements.txt
+++ b/twitter-harvester/requirements.txt
@@ -14,7 +14,7 @@ jsons==1.1.2
 munch==2.5.0
 # numpy==1.18.4
 oauthlib==3.1.0
-pandas==1.0.3
+# pandas==1.0.3
 # pyproj==2.6.1.post1
 # PySocks==1.7.1
 # python-dateutil==2.8.1
