--- a/twitter-harvester/Dockerfile
+++ b/twitter-harvester/Dockerfile
@@ -15,8 +15,8 @@ COPY . /
 
 RUN apt install -y libc-dev
 RUN apt update
-RUN apt install -y gdal-bin python3-gdal libgdal-dev build-essential python3-dev python3-pandas python3-numpy
-RUN pip install pyproj
+RUN apt install -y build-essential gdal-bin libgdal-dev python3-dev python3-pandas python3-numpy python3-gdal python3-fiona
+RUN pip install pyproj 
 RUN pip install -r requirements.txt
 
 CMD [ "python", "./main.py"]
