--- a/deployment/roles/frontend-setup/defaults/main.yaml
+++ b/deployment/roles/frontend-setup/defaults/main.yaml
@@ -5,7 +5,7 @@
 #
 #  * Yi Yang (Student ID: 1074365)
 #  * Claire Zhang (Student ID: 1080915)
-#  * Hengzhi Qiu (Student ID: )
+#  * Hengzhi Qiu (Student ID: 1253748)
 #  * Terry (Student ID: 955797)
 #  * Yonghao Hu (Student ID: 1049814)
 #
