--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -64,7 +64,7 @@
     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
   roles:
-    #  - role: project-clone
+     - role: twitter-harvester-clone
      - role: twitter-harvester-setup
 
 
