--- a/deployment/roles/frontend-setup/defaults/main.yaml
+++ b/deployment/roles/frontend-setup/defaults/main.yaml
@@ -17,4 +17,4 @@ APP_SERVER_PORT: "8000"
 # Internal port for Frontend - mapped to port 80 (HTTP)
 REACT_APP_PORT: "4000"
 # Database connection string
-COUCHDB_HOST: "http://admin:data-miner!@172.26.133.36:5984"
+COUCHDB_HOST: "http://admin:admin@172.26.134.115:5984"
