--- a/tweeter-harvester/Dockerfile
+++ b/tweeter-harvester/Dockerfile
@@ -12,9 +12,12 @@
 
 FROM python:3
 
-ADD . /
+COPY . /
 
-# Install dependencies
+RUN apt install -y libc-dev
+RUN apt update
+RUN apt install -y build-essential gdal-bin libgdal-dev python3-dev python3-pandas python3-numpy python3-gdal python3-fiona
+RUN pip install pyproj 
 RUN pip install -r requirements.txt
 
 CMD [ "python", "./searcher.py"]
