--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -64,8 +64,8 @@
     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
   roles:
-     - role: project-clone
-     - role: twitter-harvester-setup
+    #  - role: project-clone
+    #  - role: twitter-harvester-setup
      - role: data-analytics-setup
 
 
