--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -65,7 +65,7 @@
 
   roles:
      - role: project-clone
-     - role: twitter-harvester-setup
+    #  - role: twitter-harvester-setup
     #  - role: data-analytics-setup
 
 
