--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -66,7 +66,7 @@
   roles:
      - role: project-clone
     #  - role: twitter-harvester-setup
-    #  - role: data-analytics-setup
+     - role: data-analytics-setup
 
 
 # # Install data analytics scripts and React frontend
