--- a/deployment/roles/data-analytics-setup/tasks/main.yaml
+++ b/deployment/roles/data-analytics-setup/tasks/main.yaml
@@ -11,20 +11,20 @@
 #
 ---
 
-# Download Aurin data tar.gz
-- name: download and unpack Aurin Data
-  shell: sudo curl -L -o aurin "https://www.dropbox.com/s/y4ss9gmw6ykde51/twitter-melb.json.tar.gz?dl=1"; sudo tar zxvf aurin; sudo rm -rf aurin
-  args:
-    chdir: '{{ remote_analytics_directory }}'
+# # Download Aurin data tar.gz
+# - name: download and unpack Aurin Data
+#   shell: sudo curl -L -o aurin "https://www.dropbox.com/s/y4ss9gmw6ykde51/twitter-melb.json.tar.gz?dl=1"; sudo tar zxvf aurin; sudo rm -rf aurin
+#   args:
+#     chdir: '{{ remote_analytics_directory }}'
 
-# Install packages for data analytics
-- name: Install packages
-  tags: always
-  become: yes
-  pip:
-    name: ['pip', 'tweepy', 'couchdb', 'textblob', 'shapely', 'nltk']
-    state: latest
-  environment: "{{ proxy_env }}"
+# # Install packages for data analytics
+# - name: Install packages
+#   tags: always
+#   become: yes
+#   pip:
+#     name: ['pip', 'tweepy', 'couchdb', 'textblob', 'shapely', 'nltk']
+#     state: latest
+#   environment: "{{ proxy_env }}"
 
 # Perform data analysis on tweets in couchdb
 - name: run data analytics
