--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -74,8 +74,8 @@
 
 #   roles:
 #      - role: project-clone
-#      - role: twitter-harvester-setup
-#      - role: data-analytics-setup
+    #  - role: twitter-harvester-setup
+    #  - role: data-analytics-setup
 
 
 # Install data analytics scripts and React frontend
@@ -90,5 +90,5 @@
     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
   roles:
-    - role: project-clone
-    # - role: frontend-setup
+    # - role: project-clone
+    - role: frontend-setup
