--- a/deployment/main_deploy.yaml
+++ b/deployment/main_deploy.yaml
@@ -96,5 +96,5 @@
     - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
   roles:
-    # - role: project-clone
+    - role: project-clone
     - role: frontend-setup
