--- a/deployment/roles/frontend-setup/tasks/main.yaml
+++ b/deployment/roles/frontend-setup/tasks/main.yaml
@@ -65,12 +65,12 @@
     name: web_app
     state: absent
 
-# Create new docker container for web application and start container
-- name: Create and start web application Docker container
-  become: yes
-  docker_container:
-    name: web_app
-    image: test/web_app
-    state: started
-    pull: false
-    recreate: true
+# # Create new docker container for web application and start container
+# - name: Create and start web application Docker container
+#   become: yes
+#   docker_container:
+#     name: web_app
+#     image: test/web_app
+#     state: started
+#     pull: false
+#     recreate: true
