--- a/deployment/roles/web-setup/tasks/main.yaml
+++ b/deployment/roles/web-setup/tasks/main.yaml
@@ -13,59 +13,39 @@
 
 # Create Docker config directory
 - name: Make sure that Docker config directory exists
-  # become: yes
+  become: yes
   file:
     path: '~/.docker'
     state: 'directory'
 
 # Set Docker proxy for University of Melbourne Research Cloud
 - name: Ensure Docker client proxy settings are present on the server
-  # become: yes
+  become: yes
   copy:
     content: "{{ docker_proxy_settings }}"
     dest: ~/.docker/config.json
 
-# # Build Docker image for web frontend and web backend
-# - name: Configure compose
-#   become: yes
-#   template:
-#     src: "{{ playbook_dir }}/../web/docker-compose.yaml.j2"
-#     dest: "/home/ubuntu/CCC_PROJECT/web/docker-compose.yaml"
-#     owner: "{{ ansible_user }}"
-#     group: "{{ ansible_user }}"
-
-# # Run Docker compose to activate web frontend and web backend
-# - name: Run docker compose
-#   become: yes
-#   docker_compose:
-#     project_src: "/home/ubuntu/CCC_PROJECT/web/"
-#     pull: false
-#     build: yes
-#     state: present
-#     remove_orphans: no
-#     recreate: always
-
-# # Build Docker image for web application
-# - name: Build an image and push it to local repo
-#   docker_image:
-#     build:
-#       path: '/home/ubuntu/CCC_PROJECT/web_app/app2.0_v2'
-#       pull: yes
-#     name: test/web_app
-#     tag: latest
-#     source: build
-#     # force: yes
-#   # become: yes
-#   environment: "{{ proxy_env }}"
+# Build Docker image for web application
+- name: Build an image and push it to local repo
+  docker_image:
+    build:
+      path: '/home/ubuntu/CCC_PROJECT/web_application'
+      pull: yes
+    name: demo/web_app
+    tag: latest
+    source: build
+    # force: yes
+  become: yes
+  environment: "{{ proxy_env }}"
 
 # Stop existing Docker containers for web application and remove them (if any)
 - name: Stop web application Docker container
-  # become: yes
+  become: yes
   docker_container:
     name: web_app
     state: absent
 
-# # Create new docker container for web application and start container
-# - name: Run a web app docker instance
-#   shell: sudo docker run -d -p 80:80 --name web_app test/web_app
+# Create new docker container for web application and start container
+- name: Run a web app docker instance
+  shell: sudo docker run -d -p 80:80 --name web_app demo/web_app
   
