--- a/web_application/Dockerfile
+++ b/web_application/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3
 
 ADD  . /
 
-RUN pip install -r requirements.txt
+RUN /bin/sh -c 'pip install -r requirements.txt && python3 preprocess_json.py'
 
-CMD source run-app.sh
+CMD ["gunicorn", "run:app", "-c", "./gunicorn.conf.py"]
